load("//third_party/python:build_defs.bzl", "pyx_library")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

pyx_library(
    name = "pytox",
    srcs = glob(
        [
            "pytox/**/*.pxd",
            "pytox/**/*.pyx",
            "pytox/**/*.py",
        ],
        # TODO(iphydf): Remove.
        exclude = ["**/*.gen.pyx"],
    ),
    cdeps = ["//c-toxcore"],
    copts = ["-Wno-missing-variable-declarations"],
    cython_directives = {
        "embedsignature": "True",
        "embedsignature.format": "python",
        "language_level": "3",
    },
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
)
