load("//third_party/python:build_defs.bzl", "mypy_test", "pyx_library")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

pyx_library(
    name = "pytox",
    srcs = glob(
        [
            "pytox/**/*.pxd",
            "pytox/**/*.pyx",
            "pytox/**/*.py",
            "pytox/**/*.pyi",
        ],
        # TODO(iphydf): Remove.
        exclude = ["**/*.gen.pyx"],
    ),
    cdeps = ["//c-toxcore"],
    cython_directives = {
        "embedsignature": "True",
        "embedsignature.format": "python",
        "language_level": "3",
    },
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
)

mypy_test(
    name = "mypy_test",
    srcs = glob(["**/*.py"]),
    path = ["py_toxcore_c"],
)
